[gd_scene load_steps=21 format=2]

[ext_resource path="res://tscn/ui/set_page/set_page.gd" type="Script" id=1]
[ext_resource path="res://tscn/ui/button/button_focus.tres" type="StyleBox" id=2]
[ext_resource path="res://tscn/ui/button/button_default.tres" type="StyleBox" id=3]
[ext_resource path="res://tscn/ui/button/button_press.tres" type="StyleBox" id=4]
[ext_resource path="res://tscn/ui/button/button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/font/smallest_16.tres" type="DynamicFont" id=6]
[ext_resource path="res://tscn/shaders/blur.tscn" type="PackedScene" id=7]
[ext_resource path="res://tscn/ui/pro/pro2.tres" type="StyleBox" id=8]
[ext_resource path="res://tscn/ui/pro/pro.tres" type="StyleBox" id=9]
[ext_resource path="res://tscn/ui/set_page/OptionButton.gd" type="Script" id=10]
[ext_resource path="res://tscn/ui/null.tres" type="StyleBox" id=11]
[ext_resource path="res://tscn/ui/pro/bar2.tres" type="StyleBox" id=12]
[ext_resource path="res://tscn/ui/pro/bar.tres" type="StyleBox" id=13]
[ext_resource path="res://tscn/ui/pro/bar3.tres" type="StyleBox" id=14]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float blur_amount : hint_range(0, 5);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur_amount);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blur_amount = 1.0

[sub_resource type="ImageTexture" id=3]
flags = 0
flags = 0
size = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.196078, 0.196078, 0.196078, 0.396078 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.647059, 0.647059, 0.647059, 1 )

[sub_resource type="Theme" id=6]
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = ExtResource( 6 )
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 5 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = ExtResource( 8 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null

[node name="set_page" type="Node2D"]
script = ExtResource( 1 )

[node name="blur" parent="." instance=ExtResource( 7 )]
visible = false
material = SubResource( 2 )
texture = SubResource( 3 )

[node name="bg" type="Panel" parent="."]
margin_right = 1045.0
margin_bottom = 620.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sure" type="Button" parent="."]
margin_left = 467.0
margin_top = 500.0
margin_right = 589.0
margin_bottom = 542.0
rect_pivot_offset = Vector2( 147, 33.5 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "sure_ui"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="full_screen" type="Button" parent="."]
margin_left = 710.553
margin_top = 144.0
margin_right = 859.553
margin_bottom = 186.0
rect_pivot_offset = Vector2( 147, 33.5 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "full_screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 785.0
margin_top = 73.0
margin_right = 924.0
margin_bottom = 115.0
theme = SubResource( 6 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 6 )
text = "language"
align = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="language" type="Label" parent="OptionButton"]
margin_left = -151.281
margin_top = 13.0
margin_right = -35.2806
margin_bottom = 32.0
custom_fonts/font = ExtResource( 6 )
text = "language_ui:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_sound_pro" type="ProgressBar" parent="."]
margin_left = 253.0
margin_top = 73.0
margin_right = 455.0
margin_bottom = 107.0
custom_styles/fg = ExtResource( 9 )
custom_styles/bg = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
step = 1.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" type="HScrollBar" parent="main_sound_pro"]
margin_left = 4.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 32.0
custom_styles/grabber_highlight = ExtResource( 14 )
custom_styles/grabber = ExtResource( 13 )
custom_styles/scroll_focus = ExtResource( 11 )
custom_styles/scroll = ExtResource( 11 )
custom_styles/grabber_pressed = ExtResource( 12 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_sound" type="Label" parent="main_sound_pro"]
margin_left = -172.0
margin_top = 8.0
margin_right = -44.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 6 )
text = "main_sound_ui:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_pro" type="ProgressBar" parent="."]
margin_left = 253.0
margin_top = 144.0
margin_right = 455.0
margin_bottom = 178.0
custom_styles/fg = ExtResource( 9 )
custom_styles/bg = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
step = 1.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" type="HScrollBar" parent="music_pro"]
margin_left = 4.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 34.0
custom_styles/grabber_highlight = ExtResource( 14 )
custom_styles/grabber = ExtResource( 13 )
custom_styles/scroll_focus = ExtResource( 11 )
custom_styles/scroll = ExtResource( 11 )
custom_styles/grabber_pressed = ExtResource( 12 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music" type="Label" parent="music_pro"]
margin_left = -177.283
margin_top = 4.0
margin_right = -46.283
margin_bottom = 23.0
custom_fonts/font = ExtResource( 6 )
text = "music_ui:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_pro" type="ProgressBar" parent="."]
margin_left = 253.0
margin_top = 216.0
margin_right = 455.0
margin_bottom = 250.0
custom_styles/fg = ExtResource( 9 )
custom_styles/bg = ExtResource( 8 )
custom_fonts/font = ExtResource( 6 )
step = 1.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" type="HScrollBar" parent="sound_pro"]
margin_left = 4.0
margin_top = 4.0
margin_right = 197.0
margin_bottom = 34.0
custom_styles/grabber_highlight = ExtResource( 14 )
custom_styles/grabber = ExtResource( 13 )
custom_styles/scroll_focus = ExtResource( 11 )
custom_styles/scroll = ExtResource( 11 )
custom_styles/grabber_pressed = ExtResource( 12 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound" type="Label" parent="sound_pro"]
margin_left = -177.283
margin_top = 3.67081
margin_right = -46.283
margin_bottom = 22.6708
custom_fonts/font = ExtResource( 6 )
text = "sound_ui:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
